# KhantoReservations

./: pyproject.toml  readme.md
khanto/: settings.py  urls.py
khanto/apps/common/: models.py  utils.py  views.py
khanto/apps/properties/: models.py  serializers.py  tests.py  urls.py  views.py
khanto/apps/properties/fixtures/: fixture_properties_announcements.json
khanto/apps/properties/migrations/: 0001_initial.py  0002_rename_nax_guests_property_max_guests.py
khanto/apps/reservations/: models.py  serializers.py  tests.py  urls.py  views.py
khanto/apps/reservations/fixtures/: fixture_reservations.json
khanto/apps/reservations/migrations/: 0001_initial.py  0002_alter_reservation_comment.py
